demo/k8s/rke2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-springboot-app
  namespace: my-project-1
  labels:
    app: my-springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-springboot-app
  template:
    metadata:
      labels:
        app: my-springboot-app
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: nexus-pullsecret
        - configMapRef:
            name: my-config

        name: springboot-container
        image: "docker-dev-gfnexusp.gfoundries.com/my-springboot-app:4.0"
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
